fixed wrapping

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html, body {
-  display:  inline-block;
+  /* display:  inline-block;
   align-items: left;
   justify-content: left;
-  height: 100%;
+  height: 100%; */
   margin: 0px;
   padding: 0px;
   font-family: 'Castoro', serif;
@@ -12,12 +12,18 @@ html, body {
   font-family: 'Castoro', serif;
   margin-bottom: 2px;
 }
-
+div{
+  margin: 0;
+  padding: 0;
+}
 .wrapper {
-  max-width: 90%;
+  /* max-width: 90%;
   display: flex;
   flex-flow: column wrap;
-  height: 80%;
+  height: 80%; */
+  max-width: 1200px;
+  margin: 20px;
+  padding: 0;
 }
 
 .profile-picture {
@@ -32,30 +38,58 @@ figcaption {
 }
 
 .left {
-  background-color: white;
+  /* background-color: white;
   margin: 15px;
   max-width: 22%;
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: left;
-  padding: 5px 5px 5px 5px;
+  padding: 5px 5px 5px 5px; */
   /* flex: 50%; */
+  display: inline-block;
+  float: left;
+  width: 20%;
+  text-align: left;
+  align-items: center;
+  padding: 5px;
+  margin: 0px;
+  /* background-color: #8fbbd9; */
 }
 
 .job {
 font-size: 14px
 }
+.header_about,.header_pubs,.header_res {
+font-size: 32px
+}
+.header_feed,.header_holo,.header_mill,.header_beam {
+font-size: 22px
+}
 
 .right {
-  background-color: white;
+  /* background-color: white;
   margin: 5px;
   max-width: 78%;
   flex: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; */
+  display: inline-block;
+  float: left;
+  width: 70%;
+  text-align: left;
+  padding: 15px;
+  /* background-color: #7ed9a7; */
 }
 
+@media only screen and (max-width: 660px){
+  .left{
+    width: 100%;
+  }
+  .right{
+    width: 100%;
+  }
+}
 /* -------------------------- */
 
 .social-links {
@@ -88,27 +122,17 @@ font-size: 14px
 .social-links li a:not(.location):hover{
   text-decoration: underline;
 }
-/*
-.social-links li:nth-child(1) {
-    list-style-image: url('http://google-maps-icons.googlecode.com/files/teal01.png');
-}
-.social-links li:nth-child(2) {
-    list-style-image: url('http://google-maps-icons.googlecode.com/files/teal02.png');
-}
-.social-links li:nth-child(3) {
-    list-style-image: url('http://google-maps-icons.googlecode.com/files/teal03.png');
-} */
-/* -------------------------- */
+
 .menu {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 5px;
+  padding: 5px;
   font-size: 18px;
   overflow: hidden;
   background-color: white;
 }
 
-.res, .pubs, .cv,.about {
+.res, .pubs, .cv,.about,.research {
   float: right;
 }
 
@@ -116,7 +140,7 @@ font-size: 14px
   display: block;
   /* color: white; */
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 30px;
   text-decoration: none;
 }
 
@@ -146,42 +170,3 @@ font-size: 14px
 .active{
   font-weight:bold;
 }
-
-/* Style all font awesome icons */
-/* .fa {
-  padding: 5px;
-  font-size: 14px;
-  width: 15px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-} */
-
-/* Add a hover effect if you want */
-/* .fa:hover {
-  opacity: 0.7;
-} */
-
-/* Set a specific color for each brand */
-
-/* Twitter */
-/* .fa-twitter{
-  background: #55ACEE;
-  color: white;
-} */
-
-/* Linkedin */
-/* .fa-linkedin{
-  background: #006699;
-  color: white;
-} */
-/* Github */
-/* .fa-github{
-  background: black;
-  color: white;
-} */
-/* Google Scholar */
-/* .fa-google{
-  background: red;
-  color: white;
-} */
